--- a/components/ProfileDetails/ProfileDetails.module.css
+++ b/components/ProfileDetails/ProfileDetails.module.css
@@ -6,10 +6,10 @@
   padding: 2rem;
   border: var(--main-border);
   border-radius: 15px;
+  text-align: center;
   gap: 0.5rem;
   width: 100%;
-  max-height: 700px;
-  height: 100%;
+  height: 580px;
   transition: var(--main-transition);
 }
 
@@ -28,12 +28,12 @@
   min-width: 100px;
   max-height: 150px;
   min-height: 100px;
-  width: 100% !important;
-  height: 100% !important;
+  width: 100%;
+  height: 100%;
 }
 
 .profile__name {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   font-weight: 700;
   text-align: center;
   margin-bottom: 1rem;
@@ -41,19 +41,73 @@
 }
 
 .profile__info__title {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 400;
   color: #999;
   transition: var(--main-transition);
 }
 
 .profile__info {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 500;
   transition: var(--main-transition);
 }
 
 .profile__editButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  gap: 0.5rem;
   margin-top: 1rem;
-  transition: var(--main-transition) !important;
+  color: white;
+  cursor: pointer;
+  border: none;
+  background-color: black;
+  transition: var(--main-transition);
+}
+
+.profile__editButton:hover {
+  background-color: #9283ac;
+  color: white;
+  transition: var(--main-transition);
+}
+
+@media screen and (max-width: 1220px) {
+  .profile__name {
+    font-size: 2rem;
+  }
+
+  .profile__info__title {
+    font-size: 1rem;
+  }
+
+  .profile__info {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .profile__container {
+    align-items: center;
+    max-width: none;
+  }
+  .profile {
+    flex-direction: column;
+  }
+
+  .profile__details {
+    width: 100%;
+  }
+
+  .tasks__container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .profile__editButton {
+    width: 100%;
+  }
 }
