--- a/components/TasksCard/TasksCard.module.css
+++ b/components/TasksCard/TasksCard.module.css
@@ -12,17 +12,34 @@
 .card__mainInfo {
   display: flex;
   flex-direction: column;
-  max-width: 350px;
-  width: 100%;
+  width: 45%;
   transition: var(--main-transition);
 }
 
+.card__moreInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  gap: 1rem;
+  width: calc(65% - 1rem);
+}
+
 .card__title {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   font-weight: 700;
   margin: 0;
   transition: var(--main-transition);
 }
+
+.completed {
+  color: #2db664;
+}
+
+.notCompleted {
+  color: #cc1515;
+}
+
 .card__description {
   font-size: 1.2rem;
   font-weight: 400;
@@ -33,8 +50,9 @@
 .card__dates__info {
   display: flex;
   height: 100%;
-  align-items: flex-end;
-  gap: 2rem;
+  align-items: center;
+  width: calc(75% - 1rem);
+  gap: 1rem;
   transition: var(--main-transition);
 }
 
@@ -57,6 +75,92 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  text-align: center;
+  gap: 0.3rem;
+  justify-content: center;
   transition: var(--main-transition);
+}
+
+.actions__buttons__group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.3rem;
+  transition: var(--main-transition);
+}
+
+.actions__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 0.5rem 0.7rem;
+  transition: var(--main-transition);
+}
+
+.notCompleted__button {
+  background-color: #cc1515;
+}
+.notCompleted__button:hover {
+  background-color: #940f0f;
+}
+.completed__button {
+  background-color: #2db664;
+}
+.completed__button:hover {
+  background-color: #1b8a47;
+}
+
+@media screen and (max-width: 1220px) {
+  .card__title {
+    font-size: 1.2rem;
+  }
+  .card__description {
+    font-size: 1rem;
+  }
+  .card__date {
+    font-size: 1rem;
+  }
+  .card__dates__title {
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 693px) {
+  .card {
+    flex-direction: column;
+  }
+  .card__mainInfo {
+    width: 100%;
+  }
+  .card__date {
+    font-size: 0.875rem;
+  }
+  .card__moreInfo {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 371px) {
+  .card__mainInfo {
+    align-items: center;
+    text-align: center;
+  }
+
+  .card__dates__info {
+    justify-content: center;
+    text-align: center;
+  }
+
+  .card__moreInfo {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .card__dates__info {
+    width: 100%;
+  }
 }
