--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -1,6 +1,28 @@
 .main {
-  padding: 1rem 2rem;
+  padding: 2rem 2rem;
   height: 100vh;
+  width: 100%;
+  transition: var(--main-transition);
+}
+
+.goBackButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: 150px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: var(--main-transition);
+}
+
+.goBackButton:hover {
+  background-color: #9283ac;
+  color: white;
   transition: var(--main-transition);
 }
 
@@ -10,17 +32,71 @@
   align-items: center;
   height: calc(100% - 40px);
   gap: 2rem;
+  padding: 2rem 0;
+  animation: var(--main-animation);
   transition: var(--main-transition);
+}
+
+.profile__details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  min-width: 300px;
+}
+
+.tasks {
+  height: 100%;
+  width: calc(70% - 2rem);
 }
 
 .tasks__container {
   display: flex;
   flex-direction: column;
-  padding: 1rem 2rem;
+  max-height: 736px;
   height: 100%;
-  width: 100%;
   gap: 1rem;
+  padding: 1rem 2rem;
   border: var(--main-border);
   border-radius: 15px;
+  padding: 0;
+  border: none;
   transition: var(--main-transition);
+}
+
+@media screen and (max-width: 870px) {
+  .main {
+    height: 100%;
+  }
+
+  .tasks__title {
+    font-size: 1.5rem;
+  }
+
+  .profile {
+    flex-direction: column;
+  }
+
+  .profile__details {
+    width: 100%;
+  }
+
+  .tasks__container {
+    width: 100%;
+  }
+
+  .tasks {
+    height: 100%;
+    width: 100%;
+  }
+  .tasks__container {
+    padding: 0;
+    border: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .goBackButton {
+    width: 100%;
+  }
 }
